Déplacement des règles de style dans le CSS

--- a/style.css
+++ b/style.css
@@ -292,6 +292,11 @@ a:hover {
     z-index: 1;
 }
 
+.keywords {
+    color:#cccccc;
+    font-size: 1px;
+}
+
 .navbar-brand {
     height: auto;
     padding: 3px 15px;
