--- a/style.css
+++ b/style.css
@@ -647,7 +647,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: black;
 }
 
 .container {
@@ -701,10 +701,9 @@ p {
 }
 
 h3 {
-    font-size: 15px;
     text-transform: uppercase;
     font-weight: 700;
-    color: #333333!important;
+    color: black;
 }
 
 .med-width-whitespace {
@@ -1035,8 +1034,8 @@ h4 {
 
 .bloc-2-h2 {
     font-family: "helvetica";
-    width: 100%;
-    font-weight: 500;
+    font-size: clamp(1.5rem, 2.5rem, 2.8rem);
+    font-weight: 700;
     margin: 0 auto;
     color: black
     
