--- a/style.css
+++ b/style.css
@@ -766,6 +766,7 @@ h4 {
 
 .tc-white {
     color: #FFFFFF!important;
+    
 }
 
 .btn-atomic-tangerine {
@@ -1031,10 +1032,14 @@ h4 {
     }
 }
 
+h2 {
+    font-size: 22px;
+
+}
 
 .bloc-2-h2 {
     font-family: "helvetica";
-    font-size: clamp(1.5rem, 2.5rem, 2.8rem);
+    font-size: clamp(1.5rem, 2.2rem, 2.8rem);
     font-weight: 700;
     margin-bottom: 35px;
     margin: 0 auto;
