--- a/style.css
+++ b/style.css
@@ -1034,16 +1034,22 @@ h4 {
 
 h2 {
     font-size: 22px;
+    font-family: "helvetica";
+    font-weight: 700;
 
 }
 
 .bloc-2-h2 {
-    font-family: "helvetica";
+    
     font-size: clamp(1.5rem, 2.2rem, 2.8rem);
-    font-weight: 700;
     margin-bottom: 35px;
     margin: 0 auto;
     color: black;
+    
+}
+
+.bloc-3-h2 {
+    color:#F3976C;
     
 }
 
