--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2323,6 +2323,8 @@ pre code {
     }
     .col-sm-6 {
         width: 50%
+        
+        
     }
     .col-sm-5 {
         width: 41.66666667%
@@ -7682,7 +7684,7 @@ button.close {
     margin: 1px;
     text-indent: -999px;
     cursor: pointer;
-    background-color: #000\9;
+    /*background-color: #000\9;*/
     background-color: rgba(0, 0, 0, 0);
     border: 1px solid #fff;
     border-radius: 10px
