--- a/style.css
+++ b/style.css
@@ -1049,7 +1049,7 @@ h4 {
 
 
 
-.bloc-2-h2 {
+.bloc-h2 {
     
     font-size: clamp(1.5rem, 2.2rem, 2.8rem);
     margin-bottom: 35px;
@@ -1076,4 +1076,12 @@ h4 {
 
 .tc-tangerine {
     color: black !important;
+}
+
+
+
+.img-responsive {
+    margin: auto;
+    width: 360px;
+    padding: 20px 0 20px 0;
 }
