Modif taille img bloc portfolio

--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
+img {
+    object-fit: cover;
+}
+
 a,
 button {
     transition: all .3s ease-in-out;
@@ -1091,5 +1095,6 @@ h4 {
 .img-responsive {
     margin: auto;
     width: 360px;
+    height: 400px;
     padding: 20px 0 20px 0;
 }
