--- a/style.css
+++ b/style.css
@@ -699,6 +699,8 @@ p {
 }
 
 .social {
+    display: flex;
+    justify-content: space-between;
     max-width: 400px;
     margin: auto auto auto auto;
 }
