Ajout max-width et height: auto aux  img

--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ body {
 }
 
 img {
+    max-width: 100%;
+    height: auto;
     object-fit: cover;
 }
 
@@ -1097,6 +1099,5 @@ h4 {
 .img-responsive {
     margin: auto;
     width: 360px;
-    height: 400px;
     padding: 20px 0 20px 0;
 }
