--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
+img.lazyload:not([src]) {
+	visibility: hidden;
+}
+
 a,
 button {
     transition: all .3s ease-in-out;
