--- a/style.css
+++ b/style.css
@@ -7,10 +7,11 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
-img.lazyload:not([src]) {
-	visibility: hidden;
+img{
+    max-width: 100%;
+    height: auto;
+    object-fit: cover;
 }
-
 a,
 button {
     transition: all .3s ease-in-out;
@@ -1095,10 +1096,7 @@ h4 {
 
 
 .img-responsive {
-    max-width: 100%;
     width: 360px;
-    height: auto;
-    object-fit: cover;
     margin: auto;
     padding: 20px 0 20px 0;
 }
