--- a/style.css
+++ b/style.css
@@ -786,15 +786,15 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-    background: #FFFFFF!important;
+    background: #F3976C!important;
     color: black!important;
     font-weight: 700;
    
 }
 
 .btn-atomic-tangerine:hover {
-    background: #F3976C!important;
-    color: black!important;
+    background: #c27956!important;
+    color:  #FFFFFF!important;
 }
 
 .ltc-white {
