Ajout class texture-paper

--- a/style.css
+++ b/style.css
@@ -1103,3 +1103,8 @@ h4 {
 .logo {
     border-radius: 44px;
 }
+
+.texture-paper::before {
+    background: url(img/texture-paper.webp);
+    background-size: 280px 280px;
+}
